# hei-nw

./: .pre-commit-config.yaml  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pyproject.toml
codex-env/: requirements.txt
documentation/: hei-nw.md  hopfield-completion-investigation.md  m1_adapter_notes.md  python-guide.md  quick-validate.md  write-gate.md
planning/: design.md  milestone-0-plan.md  milestone-1-plan.md  milestone-2-plan.md  milestone-2b-plan.md  milestone-3-plan.md  milestone-4-plan.md  project-plan.md  validation-plan.md
prompts/: HEI-NW_milestone_review_prompt_template.md  HEI-NW_milestone_task_prompt_template.md  m2-review-prompt.md  missing-uplift-review-prompt.md  review-against-reports-prompt.md
reports/: m2-acceptance-summary-gate-writes.md  m2-acceptance-summary.md  m3-gate-write-rate-summary.json
research/: large-language-models.md  validation.md
reviews/: m2-f4h-hopfield-investigation.md  m2-planning-review.md  m2b-plan-review.md  m3_gate_calibration_review.md  milestone-0-review-2.md  milestone-0-review.md  milestone-1-review-2.md  milestone-1-review.md  milestone-2-review-2.md  milestone-2-review-3.md  milestone-2-review.md  milestone-3-review-2.md  milestone-3-review-3.md  milestone-3-review.md  model-usage-review.md  pre-milestone-4-review.md  review-m2-missing_uplift-2.md  review-m2-missing_uplift-3.md  review-m2-missing_uplift-4.md  review-m2-missing_uplift.md  validation-plan-review-m2.md
scripts/: audit_pointer_payloads.py  ci_qa_prompting_smoke.sh  compare_b0_b1.py  compare_b0_b1_m2.sh  compute_lift_ci.py  (+17 more)
(+460 files in other folders)
