[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hei-nw"
version = "0.0.1"
description = "HEI NW baseline harness"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Hei NW Team"}]
dependencies = ["numpy>=1.24","pydantic>=2.7"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E","F","I","B","UP","S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311", "S603"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
no_implicit_reexport = true
files = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
]
filterwarnings = [
    "ignore:.*[Ss]wig.*has no __module__ attribute:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src/hei_nw"]
